# wandr-backend-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
.cursor/: index.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7d397cb310cf_initial_migration_users_trips_locations.py
app/: main.py
app/api/v1/: auth.py  trips.py  users.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  base.py  location.py  trip.py  user.py
app/schemas/: __init__.py  common.py  trip.py  user.py
app/services/: trip_service.py  user_service.py
docs/: README.md
docs/adr/: 001-backend-architecture-decisions.md  002-database-schema-design.md  003-api-security-implementation.md
docs/conventions/: api-design-guide.md  fastapi-patterns.md  git-commit-conventions.md
docs/development/: fastapi-patterns.md
docs/project/: api-design-principles.md  roadmap.md
scripts/: docker-dev.sh  init-db.sql
tests/: __init__.py  conftest.py  test_database.py
tests/integration/: __init__.py  test_auth.py  test_trips.py  test_users.py
tests/unit/: __init__.py  test_models.py  test_schemas.py
